--- a/package.json
+++ b/package.json
@@ -10,15 +10,29 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@codemirror/commands": "^6.10.0",
+    "@codemirror/lang-json": "^6.0.2",
+    "@codemirror/lang-xml": "^6.1.0",
+    "@codemirror/search": "^6.5.11",
+    "@codemirror/theme-one-dark": "^6.1.3",
+    "@radix-ui/react-toast": "^1.2.15",
+    "@radix-ui/react-toggle": "^1.1.10",
+    "@shadcn/ui": "^0.0.4",
     "@tailwindcss/vite": "^4.1.12",
+    "@uiw/codemirror-theme-github": "^4.25.3",
+    "@uiw/react-codemirror": "^4.25.3",
+    "fast-xml-parser": "^5.3.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "tailwindcss": "^4.1.12"
+    "react-syntax-highlighter": "^16.1.0",
+    "tailwindcss": "^4.1.12",
+    "xml-formatter": "^3.6.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "@vitejs/plugin-react": "^5.0.0",
     "eslint": "^9.33.0",
     "eslint-plugin-react-hooks": "^5.2.0",
